Fix reveal button wrapped to the next row in tablet view

--- a/portal/src/graphql/portal/WebhookConfigurationScreen.module.css
+++ b/portal/src/graphql/portal/WebhookConfigurationScreen.module.css
@@ -20,8 +20,6 @@
 
 .secretInput {
   grid-column: 1 / span 7;
-
-  @apply tablet:col-span-full;
 }
 
 .secretButton {
